Fixed the gap between nav links

--- a/blog.css
+++ b/blog.css
@@ -27,7 +27,7 @@ body {
 
 ul {
     padding: 0;
-    width: 140px;
+    gap: 10px;
     list-style: none;
     display: flex;
     justify-content: space-between;
